fix: melhoria nas tratativas de erros internos da api
